tests/bad/testUseUndeclared.grc
// Error: Variable 'foo' used before declaration
print(foo) 